Fix remember me, translate email subjects
- Fix remember me
- Translate email subjects
- Update packages

--- a/translations/messages.cs.yaml
+++ b/translations/messages.cs.yaml
@@ -3,6 +3,7 @@ Confirm Password: Potvrdit Heslo
 Continue: Pokračovat
 Didn't get the letter?: Nedostali jste dopis?
 Don't have an account?: Nemáte účet?
+Email Confirmation: Potvrzení emailu
 Email verification: Potvrzení emailu
 Email: Email
 Error: Chyba
@@ -15,6 +16,7 @@ Log in: Přihlásit se
 Login: Přihlášení
 Name: Jméno
 New Password: Nové Heslo
+Password Recovery: Obnovení Hesla
 Password recovery: Obnovení hesla
 Password: Heslo
 Please enter the 6-digit code that we sent to your email address and new password.: Zadejte prosím 6-místný kód, který jsme odeslali na váš email, a nové heslo.
