--- a/translations/messages.ru.yaml
+++ b/translations/messages.ru.yaml
@@ -3,6 +3,7 @@ Confirm Password: Подтвердить Пароль
 Continue: Продолжить
 Didn't get the letter?: Не получили письмо?
 Don't have an account?: Нет аккаунта?
+Email Confirmation: Подтверждение Электронной Почты
 Email verification: Подтверждение электронной почты
 Email: Электронная почта
 Error: Ошибка
@@ -15,6 +16,7 @@ Log in: Войти
 Login: Вход
 Name: Имя
 New Password: Новый Пароль
+Password Recovery: Восстановление Пароля
 Password recovery: Восстановление пароля
 Password: Пароль
 Please enter the 6-digit code that we sent to your email address and new password.: Пожалуйста, введите 6-значный код, который мы отправили на ваш адрес электронной почты, и новый пароль.
