Transalate account_settings page

--- a/translations/validators.cs.yaml
+++ b/translations/validators.cs.yaml
@@ -11,6 +11,7 @@ Please enter a valid email address.: Zadejte prosím platný email.
 Please enter a valid invitation code.: Zadejte prosím platný kód pozvánky.
 Please enter an invitation code.: Zadejte prosím kód pozvánky.
 The invitation code is outdated.: Kód pozvánky je zastaralý.
+There is already an account with this email: Již existuje účet s touto emailem
 There is no account with this email.: Neexistuje žádný účet s tímto emailem.
 This code is invalid. We have sent you a new mail with a new code.: Tento kód není platný. Poslali jsme vám nový email s novým kódem.
 This code is invalid.: Tento kód není platný.
