--- a/translations/messages.cs.yaml
+++ b/translations/messages.cs.yaml
@@ -1,6 +1,12 @@
+A new photo is selected: Nová fotka je vybrána
+Account settings: Nastavení účtu
+Active invitations: Aktivní pozvánky
 Already have an account?: Už máte účet?
 Confirm Password: Potvrdit Heslo
 Continue: Pokračovat
+Create an invitation: Vytvořit pozvánku
+Created: Vytvořeno
+Delete: Odstranit
 Didn't get the letter?: Nedostali jste dopis?
 Don't have an account?: Nemáte účet?
 Email Confirmation: Potvrzení emailu
@@ -11,9 +17,13 @@ Forgot your password?: Zapomenuté heslo
 If you have not tried to register, then ignore this email.: Pokud jste se nepokusili zaregistrovat, ignorujte tento dopis.
 If you have not tried to restore password, then ignore this email.: Pokud jste se nepokusili obnovit heslo, ignorujte tento dopis.
 Invitation code: Kód pozvánky
+Invitations: Pozvánky
+Language: Jazyk
 Log in Runotab!: Přihlasit se do Runotabu.
 Log in: Přihlásit se
+Log out: Odhlásit se
 Login: Přihlášení
+Logout: Odhlášení
 Name: Jméno
 New Password: Nové Heslo
 Password Recovery: Obnovení Hesla
@@ -22,6 +32,8 @@ Password: Heslo
 Please enter the 6-digit code that we sent to your email address and new password.: Zadejte prosím 6-místný kód, který jsme odeslali na váš email, a nové heslo.
 Please enter the 6-digit code that we sent to your email address.: Zadejte prosím 6-místný kód, který jsme odeslali na vaš email.
 Please enter the email address of the account you want to restore.: Zadejte prosím email účtu, který chcete obnovit.
+Profile settings: Nastavení profilu
+Profile: Profil
 Register: Zaregistrovat se
 Registration in Runotab: Registrace v Runotabu
 Registration: Registrace
@@ -29,6 +41,9 @@ Restore Password: Obnovit Heslo
 Restore: Obnovit
 Runotab administration: správa Runotab
 Runotab is a closed social network, so you need to have an invitation code to register.: Runotab je uzavřená sociální síť, takže pro registraci musíte mít kód pozvánky.
+Save: Uložit
+Select a new photo: Vybrat novou fotografii
+Settings: Nastavení
 Sincerely: S pozdravem
 Surname: Příjmení
 To continue registering in Runotab, use this code: Aby pokračovat v registraci v Runotabu, použijte tento kód
@@ -36,3 +51,6 @@ To continue restoring password in Runotab, use this code: Aby pokračovat v obno
 Verify Email: Potvrdit Email
 Verify: Potvrdit
 Welcome to Runotab - a social network for ours!: Vítejte na Runotabu - sociální síť pro své!
+You can invite: Můžete pozvat
+You have successfully created a new invitation. Please write down this invitation code, because you will no longer be able to see it: Úspěšně jste vytvořili novou pozvánku. Zapište prosím tento kód pozvánky, protože už ho nebudete moct vidět
+You invited: Pozvali jste
