--- a/translations/validators.ru.yaml
+++ b/translations/validators.ru.yaml
@@ -11,6 +11,7 @@ Please enter a valid email address.: Пожалуйста, введите дей
 Please enter a valid invitation code.: Пожалуйста, введите действительный код приглашения.
 Please enter an invitation code.: Пожалуйста, введите пригласительный код.
 The invitation code is outdated.: Код приглашения устарел.
+There is already an account with this email: Уже есть аккаунт с этим адресом электронной почты
 There is no account with this email.: Учетная запись с этим адресом электронной почты не существует.
 This code is invalid. We have sent you a new mail with a new code.: Этот код недействителен. Мы отправили вам новое письмо с новым кодом.
 This code is invalid.: Этот код недействителен.
